--- a/css/portfoliocss.css
+++ b/css/portfoliocss.css
@@ -10,8 +10,18 @@
 
 /*Text-color*/
 
+
+
+.dark-1{
+    color: #181818;
+}
+
 .dark-2{
     color: #474747;
+}
+
+.dark-3{
+    color: #757575;
 }
 
 
@@ -31,10 +41,11 @@ nav{
     justify-content: space-between;
     margin: 50px 200px;
     
-
+}
 nav ul{
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 .nav-title{
@@ -45,7 +56,7 @@ nav ul{
 /*bnt primary */
 
 .bnt-primary{
-    pad: 18px 19px 35px 36px;
+    padding: 18px 19px 35px 36px;
     border: none;
     border-radius: 5px;
     background-color: #FD6E0A;
@@ -73,21 +84,61 @@ ul li a {
 
 /*-------banner-content*/
 .banner{
-    
-}
-.banner-content{
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-left: 230px;
+}
+
+.banner-img{
+    margin-left:230px;
+    height:676px;
+    width:584px;
+     
+}
+
+div img{
+    margin-right: 38px;
+}
+
+.banner-content{
+    height: 356px;
+    width: 585px;
+    align-items: center;
     justify-content: space-between;
 }
-}
+
+
 
 .banner-greeting{
-
+    font-weight: 600px;
+    font-size: 45px;
+    margin-bottom: 5px;
 }
 
-.banner-heding{
+.banner-hading{
+
+    font-size: 85px;
+    font-weight: 800px;
+    margin-bottom: 20px;
+    margin-top: 0px;
 
 }
 .banner-paragraph{
+
+    font-size: 18px;
+    margin-bottom: 30px;
+    margin-top: 0px;
+}
+
+
+
+.bnt-style-1{
+width: 200px;
+height: 64px;
+margin-right: 30px;
+}
+
+.bnt-style-2{
 
 }
