--- a/css/portfoliocss.css
+++ b/css/portfoliocss.css
@@ -142,3 +142,12 @@ margin-right: 30px;
 .bnt-style-2{
 
 }
+
+
+/*----- BG image design---*/
+.header{
+    background-color: #FFF8F3;
+    background-image: url(../images/developer.png), url(../images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: top left, bottom right;
+}
