Hear final final

--- a/css/portfoliocss.css
+++ b/css/portfoliocss.css
@@ -146,7 +146,7 @@ margin-right: 30px;
 
 /*----- BG image design---*/
 .header{
-    background-color: #FFF8F3;
+   /* background-color: #FFF8F3;*/
     background-image: url(../images/developer.png), url(../images/header_bg.png);
     background-repeat: no-repeat;
     background-position: top left, bottom right;
