--- a/css/portfoliocss.css
+++ b/css/portfoliocss.css
@@ -44,12 +44,12 @@
     margin: 0;
 }
 .about-description-share{
-   /* border: 2px solid red;*/
+/*border: 2px solid red;*/
 height: 120px;
 width: 827px;
 text-align: center;
 font-size: 18px;
- color: #757575;
+color: #757575;
 }
 
 
@@ -177,16 +177,15 @@ margin-right: 30px;
 /*--------main-section-----*/
 
 main{
-    height: 550px;
     max-width: 1140px;
     margin: 0 auto;
 }
 
 .about{
     height: 550px;
- margin-top: 130px;
- border: 2px solid white;
- border-radius: 10px;
+    margin-top: 130px;
+    border: 2px solid white;
+    border-radius: 10px;
  
 }
 
@@ -226,4 +225,25 @@ font-size: 20px;
     font-weight: bold;
     font-size: 20px;
     
+}
+
+/*-------Section-2---*/
+
+.section-title{
+    margin-top: 130px;
+}
+.section-description{
+margin-left: 150px;
+}
+
+
+/*------Skill-------*/
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 }
