--- a/css/portfoliocss.css
+++ b/css/portfoliocss.css
@@ -41,7 +41,7 @@
     font-size: 35px;
     color: #181818;
     text-align: center;
-    margin: 0;
+    margin:0;
 }
 .about-description-share{
 /*border: 2px solid red;*/
@@ -193,7 +193,7 @@ main{
     height: auto;
     width: 827px;
     margin: 131px 150px; 
-    border: 2px solid #000000; 
+    border: 1px solid #000000; 
     background-color: #FFFFFF;
 }
 
@@ -246,4 +246,68 @@ margin-left: 150px;
     padding: 30px;
     border-radius: 5px;
     box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+
+/*-----Education & Reachers-----*/
+.resume{
+margin-top: 130px;
+}
+
+.section-title{
+
+}
+
+.resume-container{
+    margin-top: 113px;
+    display: flex;
+    justify-content: space-between;
+    gap: 71px;
+}
+.resume-column{
+
+}
+.resume-column-title{
+    font-weight: bold;
+    font-size: 30px;
+    color: #474747;
+}
+.experience{
+
+}
+.experience-title{
+font-weight: bold;
+font-size: 25px;
+color: #474747;
+}
+.experience-sub-title{
+font-size: 20px;
+font-weight: 600;
+color: #757575;
+}
+.experience-description{
+font-size: 16px;
+color: #757575;
+}
+hr{
+    margin: 50px 5px;
+    color: #757575;
+}
+
+.bnt-secondary{
+    width: 200px;
+    height: 64px;
+    font-size:20px;
+    font-weight: bold;
+    color: white;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 18px 19px 35px 36px;
+    border: none;
+    border-radius: 5px;
+    background-color: #FD6E0A;
+}
+.bnt-secondary-container{
+    
+    text-align: center;
+    margin-top: 50px;
 }
