added footer section and complete

--- a/css/portfoliocss.css
+++ b/css/portfoliocss.css
@@ -78,12 +78,12 @@ nav ul{
 /*bnt primary */
 
 .bnt-primary{
-    padding: 18px 19px 35px 36px;
+    padding: 18px 18px 39px 39px;
     border: none;
     border-radius: 5px;
     background-color: #FD6E0A;
     height: 64px;
-    width: 150px;
+    width: 200px;
     font-size:20px;
     font-weight: bold;
     color: white;
@@ -157,7 +157,7 @@ div img{
 
 
 .bnt-style-1{
-width: 200px;
+width: 210px;
 height: 64px;
 margin-right: 30px;
 }
@@ -193,7 +193,7 @@ main{
     height: auto;
     width: 827px;
     margin: 131px 150px; 
-    border: 1px solid #000000; 
+    border: 1px solid #000000;
     background-color: #FFFFFF;
 }
 
@@ -224,6 +224,7 @@ font-size: 20px;
 .item-description{
     font-weight: bold;
     font-size: 20px;
+    color: #181818;
     
 }
 
@@ -295,7 +296,7 @@ hr{
 }
 
 .bnt-secondary{
-    width: 200px;
+    width: 210px;
     height: 64px;
     font-size:20px;
     font-weight: bold;
@@ -310,4 +311,50 @@ hr{
     
     text-align: center;
     margin-top: 50px;
+}
+
+/****-------footer style------*/
+
+footer{
+    margin-top: 93px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 117px;
+    padding: 130px 230px;
+}
+.footer-column{
+width: 50%;
+}
+.footer-column-style{
+    font-weight: bolder;
+    font-size: 35px;
+    color: #181818;
+    text-align: left;
+    margin:0;
+}
+
+.footer-description{
+    text-align: left;
+    width: 562px;
+    height: 56px;
+    font-size: 186x;
+    color: #757575;
+}
+
+footer input[type="text"], footer input[type="email"], footer textarea{
+width: 564px;
+height: 64px;
+background-color: white;
+font-size: 16px;
+color: #757575;
+border:none;
+border-radius: 5px;
+padding-top: 18px;
+padding-bottom: 18px;
+padding-left: 30px;
+padding-right: 349px;
+display: block;
+margin-top: 28px;
+margin-bottom: 24px;
 }
